[package]
name = "asi_camera2"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
image = "0.25.1"
rusb = "0.9.4"

[build-dependencies]
bindgen = "0.66.1"

[lints.clippy]
await_holding_lock = "warn"
large_futures = "warn"
unused_async = "warn"
significant_drop_in_scrutinee = "warn"
# Performance
large_stack_arrays = "warn"
# Code quality
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
